Padding to prevent horizontal scrollbar

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -3,6 +3,7 @@ body {
   color: white;
   font-family: "Arvo", sans;
   font-size: 100%;
+  padding: 0 30px;
 }
 #title {
   font-size: 22px;
